DT-2092 increases z-index to stop variants showing

--- a/less/widgets/basket.less
+++ b/less/widgets/basket.less
@@ -84,7 +84,6 @@
 
 
 
-
 .template-basket,
 .template-basket-mobile {
     overflow: hidden;
@@ -367,7 +366,7 @@
     .basket-body {
         visibility: visible;
         opacity: 1;
-         z-index: 1000;
+         z-index: 9999;
     }
 
 }
